# Webscrapping_formation

./: .gitignore  01-decouvrir_webscraping.ipynb  01-decouvrir_webscraping_a.ipynb  01-decouvrir_webscraping_b_commandes.ipynb  01-decouvrir_webscraping_b_html_css_js.ipynb  01-decouvrir_webscraping_d_python.ipynb  02-Pages_statiques.ipynb  02-Pages_statiques_corrigé.ipynb  03-Pages_dynamiques.ipynb  03-Pages_dynamiques_corrigé.ipynb  Fiche_Formation - ADUM - Websraping.docx  Notebook 1 - Statique.ipynb  Notebook 1 - corrigé.ipynb  Notebook 1.ipynb  Notebook 2 - Dynamique.ipynb  Notebook 2 - corrigé.ipynb  Notebook 2.ipynb  Notebook 3 - corrigé.ipynb  Notebook 3.ipynb  README.md  exemple.html  install_formation.sh  pyproject.toml  requirements-pedagogique.txt  requirements.txt
.ipynb_checkpoints/: 01-decouvrir_webscraping_a-checkpoint.ipynb
exemples/: The_Dormouse_s_story.html  main.py
