[project]
name = "ixxi-manip-texte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "beautifulsoup4==4.13.3",
    "blis==1.2.1",
    "catalogue==2.0.10",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpathlib==0.21.0",
    "comm==0.2.2",
    "confection==0.1.5",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "cymem==2.0.11",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "executing==2.2.0",
    "fonttools==4.56.0",
    "idna==3.10",
    "imageio==2.37.0",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets>=8.1.7",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "jupyter>=1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "langcodes==3.5.0",
    "language-data==1.3.0",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "murmurhash==1.0.12",
    "nest-asyncio==1.6.0",
    "numpy==2.2.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "pip>=25.1.1",
    "platformdirs==4.3.7",
    "preshed==3.0.9",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.11.1",
    "pydantic-core==2.33.0",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==26.3.0",
    "requests==2.32.3",
    "rich==14.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.1.0",
    "soupsieve==2.6",
    "spacy==3.8.5",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.1",
    "stack-data==0.6.3",
    "thinc==8.3.4",
    "threadpoolctl==3.6.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.15.2",
    "typing-extensions==4.13.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "wasabi==1.1.3",
    "wcwidth==0.2.13",
    "weasel==0.4.1",
    "wordcloud==1.9.4",
    "wrapt==1.17.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
